p2/config/app2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-two
  namespace: part-2
spec:
  type: ClusterIP
  selector:
    app: app-two
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
